<resources>
    <string name="lorem" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry is standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="app_name" translatable="false">Stech</string>
    <string name="title_dashboard">Người dùng</string>
    <string name="register">Đăng ký</string>
    <string name="register_account">Tạo tài khoản</string>
    <string name="email" translatable="false">Email</string>
    <string name="full_name">Tên</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="login">Đăng nhập</string>
    <string name="no_account">Chưa có tài khoản?</string>
    <string name="remember_me" translatable="false">Remember me</string>
    <string name="forget_pass">Quên mật khẩu</string>
    <string name="otp_msg">Vui lòng nhập mã xác nhận để hoàn thành đăng nhập</string>
    <string name="verify">Xác thực</string>
    <string name="category">Danh mục</string>
    <string name="selling_products">Sản phẩm bán chạy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="press_back_again_to_exit">Nhấn back lần nữa để thoát!</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="out_stock">Hết hàng</string>
    <string name="buy_now">Mua ngay</string>
    <string name="see_all">Xem tất cả</string>
    <string name="default_rate" translatable="false">0.0/0</string>
    <string name="default_review" translatable="false">0 Review</string>
    <string name="quantity">Số lượng</string>
    <string name="default_quantity" translatable="false">1</string>
    <string name="default_fee" translatable="false">0</string>
    <string name="default_discount" translatable="false">0</string>
    <string name="delete">Xoá</string>
    <string name="go_shop">Tới shop</string>
    <string name="cb_all">Tất cả</string>
    <string name="total_checkout">Tổng thanh toán:</string>
    <string name="checkout">Đặt hàng</string>
    <string name="delivery_address">Địa chỉ nhận hàng</string>
    <string name="use_voucher">Bạn có muốn chọn voucher?</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="e_banking" translatable="false">E-Banking</string>
    <string name="zalopay" translatable="false">ZaloPay</string>
    <string name="on_delivery">Thanh toán khi nhận hàng</string>
    <string name="total_product">Tổng tiền hàng:</string>
    <string name="fee_delivery">Phí vận chuyển:</string>
    <string name="discount">Giảm giá:</string>
    <string name="payment">Thanh toán</string>
    <string name="total">Tổng:</string>
    <string name="list_product">Danh sách sản phẩm</string>
    <string name="go_shopping">Đi mua sắm</string>
    <string name="are_you_sure_exit">Bạn có chắc chắn muốn thoát không?</string>
    <string name="do_not_leave_it_blank">Vui lòng không để trống!</string>
    <string name="invalid_email">"Email không hợp lệ!"</string>
    <string name="invalid_phone">"Số điện thoại không hợp lệ!"</string>
    <string name="two_passwords_must_match">2 mật khẩu phải trùng khớp nhau</string>
    <string name="test_email">username@gmail.com</string>
    <string name="test_name">username</string>
    <string name="test_phone">0312978546</string>
    <string name="test_pass">Username@123</string>
    <string name="please_log_in_again">Có lỗi xảy ra vui lòng đăng nhập lại!</string>
    <string name="an_error_occurred">Đã xảy ra lỗi!</string>
    <string name="product_selection_error">Lỗi chọn sản phẩm!</string>
    <string name="category_selection_error">Lỗi chọn thể loại!</string>
    <string name="session_expired">Phiên đăng nhập hết hạn\nVui lòng đăng nhập lại!</string>
    <string name="register_msg">Tạo tài khoản và bắt đầu mua sắm nào !</string>
    <string name="password">Mật khẩu</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="had_account">Đã có tài khoản ?</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_notifications">Thông báo</string>
    <string name="notifications">Thông báo</string>
    <string name="title_cart">Giỏ hàng</string>
    <string name="search_hint">Tìm  kiếm</string>
    <string name="stock"><i>Kho: </i></string>
    <string name="price"><i>Giá: </i></string>
    <string name="provisional"><i>Tạm tính: </i></string>
    <string name="added_to_cart">Đã thêm vào giỏ hàng</string>
    <string name="updated_quantity_success">Cập nhật số lượng thành công</string>
    <string name="quantity_exceeds_limit">Sản phẩm đã có trong giỏ hàng\nSố lượng vượt quá giới hạn</string>
    <string name="product_is_temporarily_out_of_stock">Sản phẩm tạm hết hàng, không thể đặt</string>
    <string name="language_vi">VI</string>
    <string name="language_en">EN</string>
    <string name="new_release">PHIÊN BẢN MỚI</string>
    <string name="lover_taylor">Lover, Taylor</string>
    <string name="content_image">The Lover Enhanced Album</string>
    <string name="lover">Lover</string>
    <string name="content">The Lover Enhanced Album is here! \nHandcrafted by Taylor, just for you.</string>
    <string name="stream_now">Phát ngay</string>
    <string name="illustrations">Hình ảnh minh hoạ</string>
    <string name="select_to_pay">Vui lòng chọn sản phẩm để thanh toán!</string>
    <string name="on_sale">Đang bán</string>
    <string name="temporarily_out_of_stock">Tạm hết hàng</string>
    <string name="sold"><i>Đã bán: </i></string>
    <string name="error"><i>Error: </i></string>
    <string name="setting">Setting</string>
    <string name="minimum_quantity_is_one">Số lượng tối thiểu là 1</string>
    <string name="des_long_second_time">giây trước</string>
    <string name="des_long_minute_time">phút trước</string>
    <string name="des_long_hour_time">giờ trước</string>
    <string name="des_long_day_time">ngày trước</string>
    <string name="des_short_second_time">s trước</string>
    <string name="des_short_minute_time">p trước</string>
    <string name="des_short_hour_time">g trước</string>
    <string name="des_short_day_time">d trước</string>
    <string name="default_status_notification" translatable="false">•</string>
    <string name="seen_notification">Đã xem</string>
    <string name="move">Di chuyển</string>
    <string name="copy">Sao chép</string>
    <string name="share">Chia sẻ</string>
    <string name="options">Tuỳ chọn</string>
    <string name="selected">"Đã chọn: "</string>
    <string name="my_order">Đơn hàng của tôi</string>
    <string name="logout">Đăng xuất</string>
    <string name="prepare">Chờ lấy hàng</string>
    <string name="order_in_transit">Đang giao</string>
    <string name="order_paid">Đã thanh toán</string>
    <string name="order_cancel">Đã hủy</string>
    <string name="order_waiting_confirm">Chờ xác nhận</string>
    <string name="selected_all">Chọn tất cả</string>
    <string name="call" translatable="false">Call</string>
    <string name="video_call" translatable="false">Video call</string>
    <string name="other_info">Thông tin khác</string>
    <string name="type_message">Nhắn tin</string>
    <string name="go_to_setting">Đi tới cài đặt</string>
    <string name="ask_access_denied">Bạn đã từ chối quyền lưu trữ. Vui lòng cho phép quyền trong cài đặt ứng dụng để sử dụng tính năng này.</string>
    <string name="reply">Trả lời</string>
    <string name="like">Like</string>


</resources>