<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_selected_all"
        android:checkable="true"
        android:title="@string/app_name"
        android:titleCondensed="@string/selected_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_seen_all"
        android:icon="@drawable/ic_check_seen_24"
        android:title="@string/seen_notification"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_share"
        android:icon="@drawable/ic_share_24"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_copy"
        android:icon="@drawable/ic_copy_24"
        android:title="@string/copy"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_move"
        android:icon="@drawable/ic_move_to_folder_24"
        android:title="@string/move"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_delete"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_options"
        android:icon="@drawable/ic_share_24"
        android:title="@string/options"
        app:showAsAction="never" />

</menu>