<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_overlay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="layout_overlay_message">

    <FrameLayout
        android:id="@+id/layout_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/tv_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_bold"
            android:padding="16dp"
            android:text="@string/new_release"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            style="@style/Widget.App.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginHorizontal="10dp"
            app:icon="@drawable/close_circle_24"
            tools:ignore="PrivateResource,SpeakableTextPresentCheck" />
    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_notification">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gradient_overlay"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progressbar_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility="visible" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_msg"
                    android:layout_width="260dp"
                    android:layout_height="260dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/lover_taylor"
                    app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_status_img"
                    style="@style/Widget.App.TextView.Overlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/illustrations"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:id="@+id/tv_title_img"
                        style="@style/Widget.App.TextView.Overlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rock_salt"
                        android:text="@string/lover_taylor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_content_img"
                        style="@style/Widget.App.TextView.Overlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_title_img"
                        android:fontFamily="@font/rock_salt"
                        android:text="@string/content_image"
                        android:textSize="11sp" />
                </RelativeLayout>


            </FrameLayout>


            <TextView
                android:id="@+id/tv_title"
                style="@style/Widget.App.TextView.Overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:fontFamily="@font/roboto_mono_bold"
                android:gravity="center"
                android:text="@string/lover"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/tv_content"
                style="@style/Widget.App.TextView.Overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:gravity="center"
                android:lineSpacingExtra="3dp"
                android:text="@string/content"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#f67acb"
                android:fontFamily="@font/inter_bold"
                android:text="@string/stream_now"
                android:textAllCaps="true" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>
