<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    tools:context=".ui.checkout.CheckoutActivity">

    <RelativeLayout
        android:id="@+id/layout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/delivery_address"
            android:textSize="18sp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_address"
        android:paddingVertical="8dp" />

    <RelativeLayout
        android:id="@+id/layout_discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rcv_product">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/use_voucher"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_discount"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/payment_method"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_options_payments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp" />
    </LinearLayout>


</RelativeLayout>