<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit_loading"
            style="@style/SpinKitView.Large.FadingCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxWidth="48dip"
            android:maxHeight="48dip"
            android:minWidth="48dip"
            android:minHeight="48dip"
            android:visibility="visible"
            app:SpinKit_Color="@color/purple_300" />

        <!-- NestedScrollingChild goes here (NestedScrollView, RecyclerView, etc.). -->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/layout_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="?attr/actionBarSize"
            android:visibility="invisible"
            android:scrollbars="vertical"
            android:scrollbarSize="2dp"
            app:layout_behavior="@string/searchbar_scrolling_view_behavior"
            tools:ignore="PrivateResource">
            <!-- Screen content goes here. -->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_cart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:paddingTop="10dp" />
        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:id="@+id/layout_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:paddingHorizontal="5dp">

            <CheckBox
                android:id="@+id/cb_selected_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/cb_all"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/btn_checkout"
                android:layout_toEndOf="@+id/cb_selected_all"
                android:gravity="end"
                android:orientation="vertical"
                android:paddingVertical="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/total_checkout"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text=""
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_checkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/checkout"
                android:textAllCaps="false"
                android:textSize="12sp" />
        </RelativeLayout>
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>